fix preview text color in dark mode

--- a/src/app/teacher/teacher-courses/course-topics/topic-contents/topic-preview/topic-preview.page.scss
+++ b/src/app/teacher/teacher-courses/course-topics/topic-contents/topic-preview/topic-preview.page.scss
@@ -1,5 +1,5 @@
 ion-card-content {
-  color: var(--ion-color-background);
+  color: var(--ion-color-dark);
 }
 
 ion-card {
